# POLO-CV

./: .gitignore  CMakeLists.txt  README.md  stuff.txt
ParkingLot_dataset/: README.md
include/: BoundingBox.hpp  BoundingBoxes.hpp  Graphics.hpp  ImageProcessing.hpp  Metrics.hpp  ParkingLotStatus.hpp  ParkingSpaceDetector.hpp  Segmentation.hpp  XMLReader.hpp
report_images/: metrics_average.txt
report_images/sequence0/: 2013-02-24_11_30_05_metrics.txt
report_images/sequence1/: 2013-02-22_06_25_00_metrics.txt  2013-02-22_06_55_00_metrics.txt  2013-02-22_07_05_01_metrics.txt  2013-02-22_07_10_01_metrics.txt  2013-02-22_07_15_01_metrics.txt
report_images/sequence2/: 2013-03-09_08_05_02_metrics.txt  2013-03-09_09_30_04_metrics.txt  2013-03-09_09_45_04_metrics.txt  2013-03-09_11_20_06_metrics.txt
report_images/sequence3/: 2013-03-19_06_55_01_metrics.txt  2013-03-19_07_05_01_metrics.txt  2013-03-19_07_10_01_metrics.txt  2013-03-19_07_25_01_metrics.txt
report_images/sequence4/: 2013-04-15_07_05_01_metrics.txt  2013-04-15_07_10_01_metrics.txt  2013-04-15_07_15_01_metrics.txt  2013-04-15_07_25_01_metrics.txt  2013-04-15_07_35_01_metrics.txt
src/: BoundingBox.cpp  BoundingBoxes.cpp  Graphics.cpp  ImageProcessing.cpp  Metrics.cpp  ParkingLotStatus.cpp  ParkingSpaceDetector.cpp  Segmentation.cpp  XMLReader.cpp  main.cpp  trackbar_test.cpp
testingEnv/: CMakeLists.txt  backelim.cpp  featurematching.cpp  gabor.cpp  kabiro.cpp  kmeans.cpp  main.cpp  meanshift.cpp  morph.txt  segtest.cpp  siftroi.cpp  sobeltest.cpp  surfmatching.cpp  trackbar_test.cpp
testingEnv/ParkingLot_dataset/sequence1/bounding_boxes/: 2013-02-22_06_25_00.xml
testingEnv/ParkingLot_dataset/sequence3/bounding_boxes/: 2013-03-19_07_05_01.xml  2013-03-19_07_10_01.xml  2013-03-19_07_25_01.xml
testingEnv/ParkingLot_dataset/sequence4/bounding_boxes/: 2013-04-15_07_05_01.xml  2013-04-15_07_10_01.xml
(+36 files in other folders)
